Refactor calendar components (#547)
* Move calendar packages from /experimental/components to /packages/

* Add READMEs and components .sln

* Update customaction proj to use components in new location and rename msgraph to new namespace

* Fix msgraph package id to new namespace

* Rename CalendarSkill action references to Microsoft.Bot.Component namespace

* Rename /calendar to /calendarskill

* Fix ref

* Add Microsoft.Bot.Components.sln to share all .net projects in one view

* Fix package id for calendar skill post-rename

* Fix name on readme

* Fix test references

* Combine Nuget.config for .net components

* Update readme of packages index

--- a/skills/declarative/calendarSkill/runtime/customaction/Microsoft.BotFramework.Composer.CustomAction.csproj
+++ b/skills/declarative/calendarSkill/runtime/customaction/Microsoft.BotFramework.Composer.CustomAction.csproj
@@ -14,8 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\..\experimental\components\MsGraph\Microsoft.BotFramework.CustomAction.MsGraph.csproj" />
-    <ProjectReference Include="..\..\..\..\..\experimental\components\Calendar\Microsoft.BotFramework.CustomAction.CalendarSkill.csproj" />
+    <ProjectReference Include="..\..\..\..\..\packages\CalendarSkill\Microsoft.Bot.Component.CalendarSkill.csproj" />
+    <ProjectReference Include="..\..\..\..\..\packages\MsGraph\Microsoft.Bot.Component.MsGraph.csproj" />
   </ItemGroup>
 
   <ItemGroup>
