update dialog changes

--- a/skills/declarative/calendarSkill/settings/cross-train.config.json
+++ b/skills/declarative/calendarSkill/settings/cross-train.config.json
@@ -1,7 +1,11 @@
 {
   "calendarskill.en-us": {
     "rootDialog": true,
-    "triggers": {}
+    "triggers": {
+      "": [
+        "ResolveDateTimeDialog.en-us"
+      ]
+    }
   },
   "CreateEventDialog.en-us": {
     "rootDialog": false,
@@ -14,14 +18,6 @@
       "Skip": []
     }
   },
-  "ListDialog.en-us": {
-    "rootDialog": false,
-    "triggers": {
-      "Next": [],
-      "Previous": [],
-      "Skip": []
-    }
-  },
   "GetContactsDialog.en-us": {
     "rootDialog": false,
     "triggers": {
@@ -31,31 +27,21 @@
       "Skip": []
     }
   },
-  "UpdateEventDialog.en-us": {
+  "GetEventsDialog.en-us": {
     "rootDialog": false,
     "triggers": {
       "": [
         "ResolveDateTimeDialog.en-us",
-        "GetEventsDialog.en-us",
-        "RespondToEventDialog.en-us",
-        "RespondToEventDialog.en-us",
-        "UpdateSlots.en-us",
-        "RespondToEventDialog.en-us",
-        "CancelEventDialog.en-us"
-      ],
-      "Cancel": [],
-      "ConfirmYes": []
+        "ListDialog.en-us"
+      ]
     }
   },
-  "UpdateSlots.en-us": {
+  "ListDialog.en-us": {
     "rootDialog": false,
     "triggers": {
-      "": [
-        "ResolveUpdateEntity.en-us",
-        "ResolveDateTimeDialog.en-us"
-      ],
-      "Cancel": [],
-      "CancelEvent": []
+      "Next": [],
+      "Previous": [],
+      "Skip": []
     }
   }
 }
