--- a/skills/declarative/calendarSkill/settings/cross-train.config.json
+++ b/skills/declarative/calendarSkill/settings/cross-train.config.json
@@ -44,7 +44,7 @@
       "Skip": []
     }
   },
-  "UpdateDialog.en-us": {
+  "UpdateEventDialog.en-us": {
     "rootDialog": false,
     "triggers": {
       "": [
