--- a/experimental/templates/generator-multibot/generators/app/templates/settings/appsettings.json
+++ b/experimental/templates/generator-multibot/generators/app/templates/settings/appsettings.json
@@ -24,9 +24,7 @@
     "endpoint": "",
     "authoringRegion": "",
     "defaultLanguage": "en-us",
-    "environment": "composer",
-    "authoringKey": "",
-    "endpointKey": ""
+    "environment": "composer"
   },
   "luFeatures": {
     "enablePattern": true,
@@ -41,9 +39,7 @@
   "qna": {
     "knowledgebaseid": "",
     "hostname": "",
-    "qnaRegion": "westus",
-    "endpointKey": "",
-    "subscriptionKey": ""
+    "qnaRegion": "westus"
   },
   "telemetry": {
     "logPersonalInformation": false,
@@ -69,6 +65,5 @@
   ],
   "customFunctions": [],
   "importedLibraries": [],
-  "skillHostEndpoint": "http://localhost:3980/api/skills",
-  "MicrosoftAppPassword": ""
+  "skillHostEndpoint": "http://localhost:3980/api/skills"
 }
