--- a/packages/NuGet.Config
+++ b/packages/NuGet.Config
@@ -2,6 +2,6 @@
 <configuration>
   <packageSources>
 	<clear/>
-	  <add key="SDK" value="https://pkgs.dev.azure.com/ConversationalAI/BotFramework/_packaging/SDK/nuget/v3/index.json" />
+	  <add key="SDK" value="https://botbuilder.myget.org/F/botbuilder-v4-dotnet-daily/api/v3/index.json" />
   </packageSources>
 </configuration>
