--- a/packages/CalendarSkill/Microsoft.Bot.Component.CalendarSkill.csproj
+++ b/packages/CalendarSkill/Microsoft.Bot.Component.CalendarSkill.csproj
@@ -9,7 +9,8 @@
   <!-- Nuget packaging information -->
   <PropertyGroup>
     <PackageId>Microsoft.Bot.Component.CalendarSkill</PackageId>
-    <PackageVersion>1.0.0-alpha.1</PackageVersion>
+	<VersionPrefix>1.0.0</VersionPrefix>
+	<VersionSuffix>alpha.1</VersionSuffix>
     <Description>Plugin component for Calendaring custom action</Description>
     <Summary>Plugin component for Calendaring custom action.</Summary>
     <Company>Microsoft</Company>
