--- a/packages/Welcome/package.json
+++ b/packages/Welcome/package.json
@@ -1,12 +1,15 @@
 {
   "name": "preview-bot-component-welcome",
   "version": "0.0.1-preview1",
-  "keywords": ["bf-component"],
+  "keywords": [ "bf-component" ],
   "description": "Dialogs to provide a Welcome experience for new and returning users",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Bot Framework",
-  "license": "MIT"
+  "license": "MIT",
+  "files": [
+    "/exported"
+  ]
 }
