Add repo reference to existing package.json files

--- a/packages/HelpAndCancel/package.json
+++ b/packages/HelpAndCancel/package.json
@@ -11,5 +11,9 @@
   "license": "MIT",
   "files": [
     "/exported"
-  ]
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Microsoft/botframework-components.git"
+  }
 }
