--- a/generators/generator-adaptive-bot/package.json
+++ b/generators/generator-adaptive-bot/package.json
@@ -17,5 +17,9 @@
     "yeoman-generator": "^1.1.1"
   },
   "author": "Bot Framework",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Microsoft/botframework-components.git"
+  }
 }
