--- a/generators/generator-conversational-core/package.json
+++ b/generators/generator-conversational-core/package.json
@@ -16,5 +16,9 @@
     "yeoman-generator"
   ],
   "author": "Bot Framework",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Microsoft/botframework-components.git"
+  }
 }
