--- a/packages/Welcome/package.json
+++ b/packages/Welcome/package.json
@@ -1,7 +1,9 @@
 {
   "name": "preview-bot-component-welcome",
   "version": "0.0.1-preview1",
-  "keywords": [ "bf-component" ],
+  "keywords": [
+    "bf-component"
+  ],
   "description": "Dialogs to provide a Welcome experience for new and returning users",
   "main": "index.js",
   "scripts": {
@@ -11,5 +13,9 @@
   "license": "MIT",
   "files": [
     "/exported"
-  ]
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Microsoft/botframework-components.git"
+  }
 }
