--- a/tools/generator-bot-template-generator/app/templates/generators/app/templates/.gitignore
+++ b/tools/generator-bot-template-generator/app/templates/generators/app/templates/.gitignore
@@ -1,2 +1,3 @@
-# prevent appsettings.json get checked in
-**/appsettings.json
+# prevent appsettings.development.json get checked in
+**/appsettings.development.json
+**/node_modules
