--- a/tools/generator-bot-template-generator/package.json
+++ b/tools/generator-bot-template-generator/package.json
@@ -19,19 +19,12 @@
     "node": ">=4.0.0"
   },
   "dependencies": {
-    "chalk": "^2.1.0",
-    "deep-extend": "^0.6.0",
-    "generator-node": "^2.3.0",
     "inquirer-npm-name": "^3.0.0",
-    "lint-staged": "^7.2.2",
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
-    "superb": "^3.0.0",
-    "yeoman-generator": "^3.1.1",
-    "yosay": "^2.0.1"
+    "yeoman-generator": "^3.1.1"
   },
   "devDependencies": {
-    "coveralls": "^3.0.0",
     "eslint": "^5.3.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-xo-space": "^0.20.0",
