- Adding variable name for lg response - Fixing keywords - adding AppSettings to generated output

--- a/tools/generator-bot-template-generator/package.json
+++ b/tools/generator-bot-template-generator/package.json
@@ -8,7 +8,9 @@
   ],
   "keywords": [
     "bot-template-generator",
-    "microsoft bot template"
+    "microsoft",
+    "bot",
+    "template"
   ],
   "scripts": {
     "test": "jest",
