--- a/generators/generator-conversational-core/generators/app/templates/settings/appsettings.json
+++ b/generators/generator-conversational-core/generators/app/templates/settings/appsettings.json
@@ -5,7 +5,6 @@
     "RemoveRecipientMention": false,
     "UseSetSpeakMiddleware": true
   },
-  "MicrosoftAppPassword": "",
   "MicrosoftAppId": "",
   "cosmosDb": {
     "authKey": "",
@@ -21,19 +20,16 @@
     "container": "transcripts"
   },
   "luis": {
-    "name": "Assistant",
-    "authoringKey": "",
-    "endpointKey": "",
-    "authoringRegion": "westus",
-    "defaultLanguage": "en-us",
-    "environment": "composer",
+    "name": "templates",
+    "authoringRegion": "",
+    "defaultLanguage": "",
+    "environment": "",
     "endpoint": "",
     "authoringEndpoint": ""
   },
   "publishTargets": [],
   "qna": {
     "knowledgebaseid": "",
-    "endpointkey": "",
     "hostname": ""
   },
   "telemetry": {
@@ -47,11 +43,15 @@
     "key": "csharp-azurewebapp-v2"
   },
   "downsampling": {
-    "maxImbalanceRatio": 10,
-    "maxUtteranceAllowed": 15000
+    "maxImbalanceRatio": 10
   },
   "defaultLanguage": "en-us",
   "languages": [
     "en-us"
-  ]
+  ],
+  "skillConfiguration": {
+    "isSkill": true,
+    "allowedCallers": []
+  },
+  "customFunctions": []
 }
