adding npm keywords so the template shows up in composer template selection screen

--- a/generators/generator-empty-bot/package.json
+++ b/generators/generator-empty-bot/package.json
@@ -10,5 +10,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  }
+  },
+  "keywords": [
+    "conversationalcore",
+    "yeoman-generator"
+  ]
 }
