--- a/packages/MsGraph/Microsoft.Bot.Component.MsGraph.csproj
+++ b/packages/MsGraph/Microsoft.Bot.Component.MsGraph.csproj
@@ -27,6 +27,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+    
+    <PackageReference Include="TimeZoneConverter" Version="3.4.0" />
     <AdditionalFiles Include="stylecop.json" />
   </ItemGroup>
 
