--- a/.gitignore
+++ b/.gitignore
@@ -259,13 +259,7 @@ FakesAssemblies/
 *.GhostDoc.xml
 
 # Node.js Tools for Visual Studio
-.ntvs_analysis.dat
-/solutions/**/node_modules/
-/templates/**/node_modules/
-/lib/**/node_modules/
-/tools/**/node_modules/
-/skills/**/node_modules/
-/samples/**/node_modules/
+**/node_modules/
 
 # Visual Studio 6 build log
 *.plg
