--- a/.gitignore
+++ b/.gitignore
@@ -259,6 +259,7 @@ FakesAssemblies/
 *.GhostDoc.xml
 
 # Node.js Tools for Visual Studio
+.ntvs_analysis.dat
 **/node_modules/
 
 # Visual Studio 6 build log
