--- a/packages/HelpAndCancel/package.json
+++ b/packages/HelpAndCancel/package.json
@@ -8,5 +8,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Bot Framework",
-  "license": "MIT"
+  "license": "MIT",
+  "files": [
+    "/exported"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Microsoft/botframework-components.git"
+  }
 }
