--- a/packages/Onboarding/package.json
+++ b/packages/Onboarding/package.json
@@ -1,12 +1,19 @@
 {
   "name": "preview-bot-component-onboardingdialog",
   "version": "0.0.1-preview2",
-  "keywords": ["bf-component"],
+  "keywords": [ "bf-component" ],
   "description": "Dialogs to provide an onboarding experience",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Bot Framework",
-  "license": "MIT"
+  "license": "MIT",
+  "files": [
+    "/exported"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Microsoft/botframework-components.git"
+  }
 }
