Generators: runtime and settings updates

--- a/generators/generator-empty-bot/generators/app/templates/settings/appsettings.json
+++ b/generators/generator-empty-bot/generators/app/templates/settings/appsettings.json
@@ -1,23 +1,24 @@
 {
-  "feature": {
-    "UseShowTypingMiddleware": false,
-    "UseInspectionMiddleware": false,
-    "RemoveRecipientMention": false
-  },
   "MicrosoftAppPassword": "",
   "MicrosoftAppId": "",
-  "cosmosDb": {
-    "authKey": "",
-    "containerId": "botstate-container",
-    "cosmosDBEndpoint": "",
-    "databaseId": "botstate-db"
-  },
-  "applicationInsights": {
-    "InstrumentationKey": ""
-  },
-  "blobStorage": {
-    "connectionString": "",
-    "container": "transcripts"
+  "runtimeSettings": {
+    "features": {
+      "removeRecipientMentions": false,
+      "showTyping": false,
+      "useInspection": false,
+      "setSpeak": true,
+      "traceTranscript": false
+    },
+    "telemetry": {
+      "instrumentationKey": "",
+      "logPersonalInformation": false,
+      "logActivities": true
+    },
+    "plugins": [],
+    "skills": {
+      "allowedCallers": []
+    },
+    "adapters": []
   },
   "luis": {
     "name": "",
@@ -65,9 +66,7 @@
   },
   "skill": {},
   "defaultLanguage": "en-us",
-  "languages": [
-    "en-us"
-  ],
+  "languages": ["en-us"],
   "customFunctions": [],
   "importedLibraries": []
 }
