--- a/generators/generator-preview-calendar-skill/generators/app/templates/settings/appsettings.json
+++ b/generators/generator-preview-calendar-skill/generators/app/templates/settings/appsettings.json
@@ -1,24 +1,25 @@
 {
-  "feature": {
-    "UseShowTypingMiddleware": false,
-    "UseInspectionMiddleware": false,
-    "RemoveRecipientMention": false,
-    "UseSetSpeakMiddleware": true
-  },
   "MicrosoftAppPassword": "",
   "MicrosoftAppId": "",
-  "cosmosDb": {
-    "authKey": "",
-    "collectionId": "botstate-collection",
-    "cosmosDBEndpoint": "",
-    "databaseId": "botstate-db"
-  },
-  "applicationInsights": {
-    "InstrumentationKey": ""
-  },
-  "blobStorage": {
-    "connectionString": "",
-    "container": "transcripts"
+  "defaultLocale": "en-US",
+  "runtimeSettings": {
+    "features": {
+      "removeRecipientMentions": false,
+      "showTyping": false,
+      "useInspection": false,
+      "setSpeak": true,
+      "traceTranscript": false
+    },
+    "telemetry": {
+      "instrumentationKey": "",
+      "logPersonalInformation": false,
+      "logActivities": true
+    },
+    "plugins": [],
+    "skills": {
+      "allowedCallers": []
+    },
+    "adapters": []
   },
   "luis": {
     "name": "Assistant",
@@ -36,10 +37,6 @@
     "endpointkey": "",
     "hostname": ""
   },
-  "telemetry": {
-    "logPersonalInformation": false,
-    "logActivities": true
-  },
   "runtime": {
     "customRuntime": true,
     "path": "../",
@@ -51,8 +48,6 @@
     "maxUtteranceAllowed": 15000
   },
   "defaultLanguage": "en-us",
-  "languages": [
-    "en-us"
-  ],
+  "languages": ["en-us"],
   "oauthConnectionName": "Outlook"
 }
