Updating generator-adaptive-bot to latest version.

--- a/generators/generator-adaptive-bot/generators/app/templates/assets/NuGet.config
+++ b/generators/generator-adaptive-bot/generators/app/templates/assets/NuGet.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <clear/>
-    <add key="BotBuilder.myget.org" value="https://botbuilder.myget.org/F/botbuilder-v4-dotnet-daily/api/v3/index.json" protocolVersion="3" />
+    <add key="botbuilder-v4-dotnet-daily" value="https://botbuilder.myget.org/F/botbuilder-v4-dotnet-daily/api/v3/index.json" protocolVersion="3" />
+    <add key="botpackages" value="https://fuselabs.pkgs.visualstudio.com/566d503b-55c0-46b5-9e83-8a4efa7f9efa/_packaging/botpackages/nuget/v3/index.json" />
   </packageSources>
 </configuration>
