--- a/generators/generator-adaptive-bot/package.json
+++ b/generators/generator-adaptive-bot/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-adaptive-bot",
-  "version": "1.0.0-preview.6",
+  "version": "1.0.0-preview.9",
   "description": "Yeoman generator for creating an Adaptive Bot application built on top of the Microsoft Bot Framework SDK and runtime.",
   "files": [
     "generators"
@@ -17,9 +17,5 @@
     "yeoman-generator": "^1.1.1"
   },
   "author": "Bot Framework",
-  "license": "ISC",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Microsoft/botframework-components.git"
-  }
+  "license": "ISC"
 }
