Generators: add plugin info to appsettings.json so things just work

--- a/generators/generator-adaptive-bot/generators/app/templates/assets/appsettings.json
+++ b/generators/generator-adaptive-bot/generators/app/templates/assets/appsettings.json
@@ -14,7 +14,12 @@
       "logPersonalInformation": false,
       "logActivities": true
     },
-    "plugins": [],
+    "plugins": [
+      {
+        "name": "Microsoft.Bot.Components.Recognizers.Orchestrator",
+        "settingsPrefix": "Microsoft.Bot.Components.Recognizers.Orchestrator"
+      }
+    ],
     "skills": {
       "allowedCallers": []
     },
