--- a/generators/generator-preview-calendar-skill/generators/app/templates/settings/appsettings.json
+++ b/generators/generator-preview-calendar-skill/generators/app/templates/settings/appsettings.json
@@ -15,7 +15,16 @@
       "logPersonalInformation": false,
       "logActivities": true
     },
-    "plugins": [],
+    "plugins": [
+      {
+        "name": "Microsoft.BotFramework.CustomAction.CalendarSkill",
+        "settingsPrefix": "Microsoft.BotFramework.CustomAction.CalendarSkill"
+      },
+      {
+        "name": "Microsoft.BotFramework.CustomAction.MsGraph",
+        "settingsPrefix": "Microsoft.BotFramework.CustomAction.MsGraph"
+      }
+    ],
     "skills": {
       "allowedCallers": []
     },
