--- a/generators/generator-empty-bot/generators/app/templates/settings/appsettings.json
+++ b/generators/generator-empty-bot/generators/app/templates/settings/appsettings.json
@@ -14,7 +14,12 @@
       "logPersonalInformation": false,
       "logActivities": true
     },
-    "plugins": [],
+    "plugins": [
+      {
+        "name": "Microsoft.Bot.Components.Recognizers.Orchestrator",
+        "settingsPrefix": "Microsoft.Bot.Components.Recognizers.Orchestrator"
+      }
+    ],
     "skills": {
       "allowedCallers": []
     },
