Generators: remove plugins from appsettings.json files

--- a/generators/generator-conversational-core/generators/app/templates/settings/appsettings.json
+++ b/generators/generator-conversational-core/generators/app/templates/settings/appsettings.json
@@ -15,12 +15,7 @@
       "logPersonalInformation": false,
       "logActivities": true
     },
-    "plugins": [
-      {
-        "name": "Microsoft.Bot.Components.Recognizers.Orchestrator",
-        "settingsPrefix": "Microsoft.Bot.Components.Recognizers.Orchestrator"
-      }
-    ],
+    "plugins": [],
     "skills": {
       "allowedCallers": []
     },
