--- a/generators/generator-adaptive-bot/generators/app/templates/assets/appsettings.json
+++ b/generators/generator-adaptive-bot/generators/app/templates/assets/appsettings.json
@@ -14,12 +14,7 @@
       "logPersonalInformation": false,
       "logActivities": true
     },
-    "plugins": [
-      {
-        "name": "Microsoft.Bot.Components.Recognizers.Orchestrator",
-        "settingsPrefix": "Microsoft.Bot.Components.Recognizers.Orchestrator"
-      }
-    ],
+    "plugins": [],
     "skills": {
       "allowedCallers": []
     },
