--- a/generators/generator-preview-calendar-skill/generators/app/templates/settings/appsettings.json
+++ b/generators/generator-preview-calendar-skill/generators/app/templates/settings/appsettings.json
@@ -15,16 +15,7 @@
       "logPersonalInformation": false,
       "logActivities": true
     },
-    "plugins": [
-      {
-        "name": "Microsoft.BotFramework.CustomAction.CalendarSkill",
-        "settingsPrefix": "Microsoft.BotFramework.CustomAction.CalendarSkill"
-      },
-      {
-        "name": "Microsoft.BotFramework.CustomAction.MsGraph",
-        "settingsPrefix": "Microsoft.BotFramework.CustomAction.MsGraph"
-      }
-    ],
+    "plugins": [],
     "skills": {
       "allowedCallers": []
     },
