--- a/packages/Calendar/Microsoft.Bot.Components.Calendar.csproj
+++ b/packages/Calendar/Microsoft.Bot.Components.Calendar.csproj
@@ -9,7 +9,7 @@
   <PropertyGroup>
     <PackageId>Microsoft.Bot.Components.Calendar</PackageId>
     <VersionPrefix>1.0.0</VersionPrefix>
-    <VersionSuffix>alpha.1</VersionSuffix>
+    <VersionSuffix>preview1</VersionSuffix>
     <Description>Plugin component for Calendaring custom action</Description>
     <Summary>Plugin component for Calendaring custom action.</Summary>
     <Company>Microsoft</Company>
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MsGraph\Microsoft.Bot.Components.Graph.csproj" PrivateAssets="all" />
+    <ProjectReference Include="..\Graph\Microsoft.Bot.Components.Graph.csproj" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
