--- a/packages/Graph/Microsoft.Bot.Components.Graph.csproj
+++ b/packages/Graph/Microsoft.Bot.Components.Graph.csproj
@@ -8,7 +8,7 @@
   <PropertyGroup>
     <PackageId>Microsoft.Bot.Components.Graph</PackageId>
     <VersionPrefix>1.0.0</VersionPrefix>
-    <VersionSuffix>alpha.1</VersionSuffix>
+    <VersionSuffix>preview1</VersionSuffix>
     <Description>Plugin component for MSGraph custom action</Description>
     <Summary>Plugin component for MSGraph custom action.</Summary>
     <Company>Microsoft</Company>
@@ -27,7 +27,6 @@
     </PackageReference>
     
     <PackageReference Include="TimeZoneConverter" Version="3.4.0" />
-    <AdditionalFiles Include="stylecop.json" />
   </ItemGroup>
 
   <ItemGroup>
