--- a/packages/HelpAndCancel/Microsoft.Bot.Components.HelpAndCancel.nuspec
+++ b/packages/HelpAndCancel/Microsoft.Bot.Components.HelpAndCancel.nuspec
@@ -1,15 +1,17 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
-        <id>Preview.Bot.Component.HelpAndCancel</id>
-        <version>0.0.1-preview1</version>
+        <id>Microsoft.Bot.Components.HelpAndCancel</id>
+        <version>1.0.0-preview1</version>
         <authors>Microsoft</authors>
         <owners>Microsoft</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <releaseNotes>First version of HelpAndCancel package</releaseNotes>
         <description>Dialog to provide "help" and "cancel" utterance handling</description>
-        <tags>bf-component conversationalcore helpintent cancelintent preview</tags>
-        <dependencies />
+        <tags>bf-components conversationalcore helpintent cancelintent preview</tags>
+        <dependencies>
+            <dependency id="Microsoft.Bot.Builder.Integration.Runtime" version="4.12.0-rc0.preview" />
+        </dependencies>
     </metadata>
 
     <files>
