--- a/packages/HelpAndCancel/package.json
+++ b/packages/HelpAndCancel/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "preview-bot-component-helpandcancel",
-  "version": "0.0.1-preview1",
-  "keywords": [ "bf-component" ],
+  "name": "bot-components-helpandcancel",
+  "version": "1.0.0-preview1",
+  "keywords": [
+    "bf-components"
+  ],
   "description": "Dialog to provide \"help\" and \"cancel\" utterance handling",
   "main": "index.js",
   "scripts": {
