--- a/packages/Orchestrator/Microsoft.Bot.Components.Orchestrator.csproj
+++ b/packages/Orchestrator/Microsoft.Bot.Components.Orchestrator.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <PackageId>Microsoft.Bot.Components.Orchestrator</PackageId>
     <VersionPrefix>1.0.0</VersionPrefix>
-    <VersionSuffix>alpha.1</VersionSuffix>
+    <VersionSuffix>preview1</VersionSuffix>
     <Description>Plugin component for Microsoft.Bot.Builder.Integration.Runtime to register Orchestrator adaptive recognizer.</Description>
     <Summary>Plugin component for Microsoft.Bot.Builder.Integration.Runtime to register Orchestrator adaptive recognizer.</Summary>
     <Company>Microsoft</Company>
