--- a/packages/Welcome/package.json
+++ b/packages/Welcome/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "preview-bot-component-welcome",
-  "version": "0.0.1-preview1",
-  "keywords": ["bf-component"],
+  "name": "bot-components-welcome",
+  "version": "1.0.0-preview1",
+  "keywords": [
+    "bf-components"
+  ],
   "description": "Dialogs to provide a Welcome experience for new and returning users",
   "main": "index.js",
   "scripts": {
