Adding period separator to package version suffix values, and adding @microsoft organzation prefix to npm package names.

--- a/packages/HelpAndCancel/package.json
+++ b/packages/HelpAndCancel/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bot-components-helpandcancel",
-  "version": "1.0.0-preview1",
+  "name": "@microsoft/bot-components-helpandcancel",
+  "version": "1.0.0-preview.1",
   "keywords": [
     "bf-components"
   ],
