updated LG responses and card actions

--- a/skills/declarative/calendarSkill/settings/cross-train.config.json
+++ b/skills/declarative/calendarSkill/settings/cross-train.config.json
@@ -25,7 +25,8 @@
       "": [
         "ListDialog.en-us"
       ],
-      "Skip": []
+      "Skip": [],
+      "SetAttendeesAdd": []
     }
   },
   "GetEventsDialog.en-us": {
