Removing preview numeric value from package version suffixes.

--- a/packages/HelpAndCancel/package.json
+++ b/packages/HelpAndCancel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/bot-components-helpandcancel",
-  "version": "1.0.0-preview.1",
+  "version": "1.0.0-preview",
   "keywords": [
     "bf-components"
   ],
