--- a/packages/Onboarding/Microsoft.Bot.Components.Onboarding.nuspec
+++ b/packages/Onboarding/Microsoft.Bot.Components.Onboarding.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Microsoft.Bot.Components.Onboarding</id>
-        <version>1.0.0-preview.1</version>
+        <version>1.0.0-preview</version>
         <authors>Microsoft</authors>
         <owners>Microsoft</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
