--- a/packages/Onboarding/package.json
+++ b/packages/Onboarding/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/bot-components-onboarding",
-  "version": "1.0.0-preview.1",
+  "version": "1.0.0-preview",
   "keywords": [
     "bf-components"
   ],
