Install npm-version-suffix and npm-add-script in the same step, add version suffix provided to package.json

--- a/packages/Welcome/package.json
+++ b/packages/Welcome/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/bot-components-welcome",
-  "version": "1.0.0-preview",
+  "version": "1.0.0",
   "keywords": [
     "bf-components"
   ],
