--- a/generators/generator-microsoft-bot-empty/package.json
+++ b/generators/generator-microsoft-bot-empty/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/generator-microsoft-bot-empty",
-  "version": "1.0.0-preview.1",
+  "version": "1.0.0",
   "description": "",
   "main": "./generators/app/templates/index.js",
   "dependencies": {
