--- a/generators/generator-microsoft-bot-command-list/package.json
+++ b/generators/generator-microsoft-bot-command-list/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "generator-command-list",
-  "version": "1.0.0-preview.1",
-  "description": "",
+  "name": "@microsoft/generator-microsoft-bot-command-list",
+  "version": "1.0.0",
+  "description": "Preview command list bot for TESTING ONLY",
   "main": "./generators/app/templates/index.js",
   "dependencies": {
     "generator-adaptive-bot": "^1.0.0-preview.9",
