--- a/generators/generator-microsoft-bot-adaptive/generators/app/templates/assets/appsettings.json
+++ b/generators/generator-microsoft-bot-adaptive/generators/app/templates/assets/appsettings.json
@@ -1,7 +1,24 @@
 {
   "MicrosoftAppPassword": "",
   "MicrosoftAppId": "",
-  "applicationInsights": {
-    "InstrumentationKey": ""
+  "defaultLocale": "en-US",
+  "runtimeSettings": {
+    "features": {
+      "removeRecipientMentions": false,
+      "showTyping": false,
+      "useInspection": false,
+      "traceTranscript": false
+    },
+    "telemetry": {
+      "instrumentationKey": "",
+      "logPersonalInformation": false,
+      "logActivities": true
+    },
+    "plugins": [],
+    "skills": {
+      "allowedCallers": []
+    },
+    "storage": "",
+    "adapters": []
   }
 }
