--- a/generators/generator-microsoft-bot-conversational-core/generators/app/templates/settings/appsettings.json
+++ b/generators/generator-microsoft-bot-conversational-core/generators/app/templates/settings/appsettings.json
@@ -1,23 +1,25 @@
 {
-  "feature": {
-    "UseShowTypingMiddleware": false,
-    "UseInspectionMiddleware": false,
-    "RemoveRecipientMention": false,
-    "UseSetSpeakMiddleware": true
-  },
+  "MicrosoftAppPassword": "",
   "MicrosoftAppId": "",
-  "cosmosDb": {
-    "authKey": "",
-    "collectionId": "botstate-collection",
-    "cosmosDBEndpoint": "",
-    "databaseId": "botstate-db"
-  },
-  "applicationInsights": {
-    "InstrumentationKey": ""
-  },
-  "blobStorage": {
-    "connectionString": "",
-    "container": "transcripts"
+  "defaultLocale": "en-US",
+  "runtimeSettings": {
+    "features": {
+      "removeRecipientMentions": false,
+      "showTyping": false,
+      "useInspection": false,
+      "setSpeak": true,
+      "traceTranscript": false
+    },
+    "telemetry": {
+      "instrumentationKey": "",
+      "logPersonalInformation": false,
+      "logActivities": true
+    },
+    "plugins": [],
+    "skills": {
+      "allowedCallers": []
+    },
+    "adapters": []
   },
   "luis": {
     "name": "templates",
@@ -32,10 +34,6 @@
     "knowledgebaseid": "",
     "hostname": ""
   },
-  "telemetry": {
-    "logPersonalInformation": false,
-    "logActivities": true
-  },
   "runtime": {
     "customRuntime": true,
     "path": "../",
@@ -45,13 +43,6 @@
   "downsampling": {
     "maxImbalanceRatio": 10
   },
-  "defaultLanguage": "en-us",
-  "languages": [
-    "en-us"
-  ],
-  "skillConfiguration": {
-    "isSkill": true,
-    "allowedCallers": []
-  },
-  "customFunctions": []
+  "customFunctions": [],
+  "languages": ["en-us"]
 }
