--- a/generators/generator-multibot/generators/app/templates/settings/appsettings.json
+++ b/generators/generator-multibot/generators/app/templates/settings/appsettings.json
@@ -1,30 +1,40 @@
 {
-  "feature": {
-    "UseShowTypingMiddleware": false,
-    "UseInspectionMiddleware": false,
-    "RemoveRecipientMention": false
-  },
+  "MicrosoftAppPassword": "",
   "MicrosoftAppId": "",
-  "cosmosDb": {
-    "authKey": "",
-    "containerId": "botstate-container",
-    "cosmosDBEndpoint": "",
-    "databaseId": "botstate-db"
-  },
-  "applicationInsights": {
-    "InstrumentationKey": ""
-  },
-  "blobStorage": {
-    "connectionString": "",
-    "container": "transcripts"
+  "defaultLocale": "en-US",
+  "runtimeSettings": {
+    "features": {
+      "removeRecipientMentions": false,
+      "showTyping": false,
+      "useInspection": false,
+      "setSpeak": true,
+      "traceTranscript": false
+    },
+    "telemetry": {
+      "instrumentationKey": "",
+      "logPersonalInformation": false,
+      "logActivities": true
+    },
+    "plugins": [
+      {
+        "name": "Microsoft.Bot.Components.Recognizers.Orchestrator",
+        "settingsPrefix": "Microsoft.Bot.Components.Recognizers.Orchestrator"
+      }
+    ],
+    "skills": {
+      "allowedCallers": []
+    },
+    "adapters": []
   },
   "luis": {
-    "name": "conversational-core",
-    "authoringEndpoint": "",
-    "endpoint": "",
-    "authoringRegion": "",
+    "name": "Assistant",
+    "authoringKey": "",
+    "endpointKey": "",
+    "authoringRegion": "westus",
     "defaultLanguage": "en-us",
-    "environment": "composer"
+    "environment": "composer",
+    "endpoint": "",
+    "authoringEndpoint": ""
   },
   "luFeatures": {
     "enablePattern": true,
@@ -38,12 +48,8 @@
   "publishTargets": [],
   "qna": {
     "knowledgebaseid": "",
-    "hostname": "",
-    "qnaRegion": "westus"
-  },
-  "telemetry": {
-    "logPersonalInformation": false,
-    "logActivities": true
+    "endpointkey": "",
+    "hostname": ""
   },
   "runtime": {
     "customRuntime": true,
@@ -54,15 +60,7 @@
   "downsampling": {
     "maxImbalanceRatio": -1
   },
-  "skillConfiguration": {
-    "isSkill": true,
-    "allowedCallers": []
-  },
-  "skill": {},
-  "defaultLanguage": "en-us",
-  "languages": [
-    "en-us"
-  ],
+  "languages": ["en-us"],
   "customFunctions": [],
   "importedLibraries": [],
   "skillHostEndpoint": "http://localhost:3980/api/skills"
