added default duration to settings for calendar generator

--- a/generators/generator-preview-calendar-skill/generators/app/templates/settings/appsettings.json
+++ b/generators/generator-preview-calendar-skill/generators/app/templates/settings/appsettings.json
@@ -58,5 +58,8 @@
   },
   "defaultLanguage": "en-us",
   "languages": ["en-us"],
-  "oauthConnectionName": "Outlook"
+  "oauthConnectionName": "Outlook",
+  "defaultValue": {
+    "duration": 30
+  }
 }
