Updating component package references and plugin definitions across all generators.

--- a/generators/generator-multibot/generators/app/templates/settings/appsettings.json
+++ b/generators/generator-multibot/generators/app/templates/settings/appsettings.json
@@ -17,8 +17,8 @@
     },
     "plugins": [
       {
-        "name": "Microsoft.Bot.Components.Recognizers.Orchestrator",
-        "settingsPrefix": "Microsoft.Bot.Components.Recognizers.Orchestrator"
+        "name": "Microsoft.Bot.Components.Orchestrator",
+        "settingsPrefix": "Microsoft.Bot.Components.Orchestrator"
       }
     ],
     "skills": {
