--- a/generators/generator-preview-calendar-skill/generators/app/templates/settings/appsettings.json
+++ b/generators/generator-preview-calendar-skill/generators/app/templates/settings/appsettings.json
@@ -17,12 +17,12 @@
     },
     "plugins": [
       {
-        "name": "Microsoft.BotFramework.CustomAction.CalendarSkill",
-        "settingsPrefix": "Microsoft.BotFramework.CustomAction.CalendarSkill"
+        "name": "Microsoft.Bot.Components.Calendar",
+        "settingsPrefix": "Microsoft.Bot.Components.Calendar"
       },
       {
-        "name": "Microsoft.BotFramework.CustomAction.MsGraph",
-        "settingsPrefix": "Microsoft.BotFramework.CustomAction.MsGraph"
+        "name": "Microsoft.Bot.Components.Graph",
+        "settingsPrefix": "Microsoft.Bot.Components.Graph"
       }
     ],
     "skills": {
