--- a/generators/generator-microsoft-bot-adaptive/package.json
+++ b/generators/generator-microsoft-bot-adaptive/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/generator-microsoft-bot-adaptive",
-  "version": "1.0.0",
+  "version": "1.0.0-preview-20210219.c75d357",
   "description": "Yeoman generator for creating an Adaptive Bot application built on top of the Microsoft Bot Framework SDK and runtime.",
   "files": [
     "generators"
