--- a/generators/generator-microsoft-bot-empty/package.json
+++ b/generators/generator-microsoft-bot-empty/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@microsoft/generator-microsoft-bot-empty",
-  "version": "1.0.0",
+  "version": "1.0.0-preview-20210219.c75d357",
   "description": "",
   "main": "./generators/app/templates/index.js",
   "dependencies": {
-    "generator-adaptive-bot": "^1.0.0-preview.9",
+    "generator-microsoft-bot-adaptive": "^1.0.0-preview-20210219.c75d357",
     "yeoman-generator": "^2.0.5",
     "yeoman-test": "^1.9.1"
   },
