--- a/generators/generator-microsoft-bot-conversational-core/package.json
+++ b/generators/generator-microsoft-bot-conversational-core/package.json
@@ -4,7 +4,7 @@
   "description": "Preview conversational core package for TESTING ONLY",
   "main": "./generators/app/templates/index.js",
   "dependencies": {
-    "generator-microsoft-bot-adaptive": "^1.0.0-preview-20210219.c75d357",
+    "@microsoft/generator-microsoft-bot-adaptive": "^1.0.0-preview-20210219.c75d357",
     "yeoman-generator": "^2.0.5",
     "yeoman-test": "^1.9.1"
   },
