--- a/generators/generator-microsoft-bot-multibot/package.json
+++ b/generators/generator-microsoft-bot-multibot/package.json
@@ -5,7 +5,7 @@
   "main": "./generators/app/index.js",
   "dependencies": {
     "@microsoft/generator-microsoft-bot-adaptive": "^1.0.0-preview-20210222.fbfbf89",
-    "@microsoft/generator-microsoft-bot-calendar": "^0.0.1",
+    "@microsoft/generator-microsoft-bot-calendar": "^0.0.1-preview-20210223.4bcc06f",
     "yeoman-generator": "^2.0.5",
     "yeoman-test": "^1.9.1"
   },
