--- a/generators/generator-microsoft-bot-adaptive/package.json
+++ b/generators/generator-microsoft-bot-adaptive/package.json
@@ -22,5 +22,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/Microsoft/botframework-components.git"
+  },
+  "scripts": {
+    "lint": "eslint . --ext .js,.ts"
   }
 }
