Add licenseUrl, projectUrl, requirelicenseacceptance to cs proj files

--- a/packages/Orchestrator/Microsoft.Bot.Components.Orchestrator.csproj
+++ b/packages/Orchestrator/Microsoft.Bot.Components.Orchestrator.csproj
@@ -10,6 +10,9 @@
     <Authors>Microsoft</Authors>
     <Product>Microsoft Bot Builder SDK</Product>
     <Copyright>© Microsoft Corporation. All rights reserved.</Copyright>
+	<LicenseUrl>https://github.com/Microsoft/BotBuilder/blob/master/LICENSE</LicenseUrl>
+	<RequireLicenseAcceptance>true</RequireLicenseAcceptance>
+	<ProjectUrl>https://github.com/Microsoft/botframework-components</ProjectUrl>
 	<SignAssembly>true</SignAssembly>
 	<AssemblyOriginatorKeyFile>..\..\build\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
 	<DelaySign>true</DelaySign>
