--- a/packages/Graph/Microsoft.Bot.Components.Graph.csproj
+++ b/packages/Graph/Microsoft.Bot.Components.Graph.csproj
@@ -14,7 +14,10 @@
     <Authors>Microsoft</Authors>
     <Product>Microsoft Bot Builder SDK</Product>
     <Copyright>© Microsoft Corporation. All rights reserved.</Copyright>
-    <SignAssembly>true</SignAssembly>
+	<LicenseUrl>https://github.com/Microsoft/BotBuilder/blob/master/LICENSE</LicenseUrl>
+	<RequireLicenseAcceptance>true</RequireLicenseAcceptance>
+	<ProjectUrl>https://github.com/Microsoft/botframework-components</ProjectUrl>
+	<SignAssembly>true</SignAssembly>
 	<AssemblyOriginatorKeyFile>..\..\build\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
 	<DelaySign>true</DelaySign>  
   </PropertyGroup>
