add bf-components to csproj tags

--- a/packages/Graph/Microsoft.Bot.Components.Graph.csproj
+++ b/packages/Graph/Microsoft.Bot.Components.Graph.csproj
@@ -17,6 +17,7 @@
 	<PackageLicenseUrl>https://github.com/Microsoft/BotBuilder/blob/master/LICENSE</PackageLicenseUrl>
 	<RequireLicenseAcceptance>true</RequireLicenseAcceptance>
 	<PackageProjectUrl>https://github.com/Microsoft/botframework-components</PackageProjectUrl>
+    <PackageTags>bf-components</PackageTags>
 	<SignAssembly>true</SignAssembly>
 	<AssemblyOriginatorKeyFile>..\..\build\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
 	<DelaySign>true</DelaySign>  
