--- a/skills/declarative/calendarSkill/settings/appsettings.json
+++ b/skills/declarative/calendarSkill/settings/appsettings.json
@@ -1,7 +1,7 @@
 {
   "oauthConnectionName": "",
   "feature": {
-    "UseShowTypingMiddleware": false,
+    "UseShowTypingMiddleware": true,
     "UseInspectionMiddleware": false,
     "RemoveRecipientMention": false
   },
@@ -54,10 +54,11 @@
     "duration": 30
   },
   "skillConfiguration": {
-    "isSkill": false,
+    "isSkill": true,
     "allowedCallers": [
       "*"
     ]
   },
-  "customFunctions": []
+  "customFunctions": [],
+  "skillHostEndpoint": "http://localhost:3980/api/skills"
 }
