--- a/packages/Calendar/Microsoft.Bot.Components.Calendar.csproj
+++ b/packages/Calendar/Microsoft.Bot.Components.Calendar.csproj
@@ -11,6 +11,7 @@
     <VersionPrefix>1.0.0</VersionPrefix>
     <Description>Plugin component for Calendaring custom action</Description>
     <Summary>Plugin component for Calendaring custom action.</Summary>
+  	<AssemblyOriginatorKeyFile>..\..\build\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
