Pipelines: Add missing package properties/tags, include symbols/sources (#639)
* Add signing steps that copy from outputpackages to signing dir

* Add nuget signing steps to dotnet packaging

* Add support files to signing

* add signing steps to nuspec steps

* Use botframework-components-esrp connected service name

* Add botframework-components-esrp to .nupkg signing step

* Add botframework-components-esrp to strong name signing step

* Nupkg files from \outputpackages to \signing to \publish to build artifacts container

* Remove duplicate \outputpackages

* Add use dotnet 2.1.x step for signing

* Add conditionals to only unpack and sign the .dlls if it's a code extension

* Add assembly originator file reference to graph

* Reference strong name key for all 3 packages

* trim any whitespace in the xml version prefix

* trim after gettingversion

* cast xml version as string

* Add licenseURl to werlcome

* Add projectUrl to welcome nuspec

* Add copyright element to welconme

* Add missing copyright, licrenseurl, projecturl to other nuspecs

* Add licenseUrl, projectUrl, requirelicenseacceptance to cs proj files

* Use correct PackageX properties for csproj

* include symbols for dotnet pack and nuget pack

* add bf-components to csproj tags

* Include singular and plural bf-component(s) tags

* Add includesource: true to dotnet pack tasks

* include SymbolPackageFormat kvp in buildProperties

* Add clear tag to who nuget.config

* Update Microsoft.Bot.Components.Calendar.csproj

fix tabs

* Update Microsoft.Bot.Components.Graph.csproj

fix tabs

* Update Microsoft.Bot.Components.HelpAndCancel.nuspec

fix tabs

* Update Microsoft.Bot.Components.Onboarding.nuspec

fix tabs

* Update Microsoft.Bot.Components.Orchestrator.csproj

fix tabs

* Update Microsoft.Bot.Components.Welcome.nuspec

fix tabs

* Replace project properties in csproj with directory.build.props for packages

* re

--- a/packages/Onboarding/package.json
+++ b/packages/Onboarding/package.json
@@ -2,7 +2,7 @@
   "name": "@microsoft/bot-components-onboarding",
   "version": "1.0.0",
   "keywords": [
-    "bf-components"
+    "bf-component"
   ],
   "description": "Dialogs to provide an onboarding experience",
   "main": "index.js",
