Fix copyright char

--- a/packages/Directory.Build.props
+++ b/packages/Directory.Build.props
@@ -7,7 +7,7 @@
 
     <Authors>Microsoft</Authors>
     <Product>Microsoft Bot Builder SDK</Product>
-    <Copyright>© Microsoft Corporation. All rights reserved.</Copyright>
+    <Copyright>Â© Microsoft Corporation. All rights reserved.</Copyright>
   </PropertyGroup>
 
   <PropertyGroup>
